welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: method posfin has return statement; needs result type
			return true
                        ^SnakeBuggle:14: error: method posfin has return statement; needs result type
		} else return false
                       ^SnakeBuggle:15: error: method posfin has return statement; needs result type
	} else return false
               ^