welcome.lessons.welcome.traversal.Snake.scala.code
override def run() 
{

def posfin()=
{
	if (estFaceMur() && getDirection()==Direction.EST)
	{
		gauche()
		if (estFaceMur())
		{
			droite()
			return true
		} else return false
	} else return false
		
}

def serpent()
{
	baisseBrosse()
	while (posfin()==false)
	{
		if (estFaceMur() && (getDirection() == Direction.EST))
		{
			gauche()
			avance()
			gauche()
		}
		if (estFaceMur() && (getDirection() == Direction.OUEST))
		{
			droite()
			avance()
			droite()
		} else avance()
	}
}

serpent()
	
}
